--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
 
 <header>
+<img src="logo.png" alt="Логотип Мир Цитат" class="logo">
     <nav>
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -95,5 +96,3 @@
 
 </body>
 </html>
-
-
